--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Eagle Movie Aggragator Information</h1>
+ <h1>Movie Aggragator Information</h1>
  <br><br>
  <div class="input-container">
  <input type="text" id="searchInput" placeholder="Search for a movie…">
